--- a/facturascripts.ini
+++ b/facturascripts.ini
@@ -1,1 +1,3 @@
 version = 1
+version_url = 'https://raw.githubusercontent.com/NeoRazorX/modelo_347/master/facturascripts.ini'
+update_url = 'https://github.com/NeoRazorX/modelo_347/archive/master.zip'
