--- a/facturascripts.ini
+++ b/facturascripts.ini
@@ -1,3 +1,4 @@
-version = 2
+version = 3
 version_url = 'https://raw.githubusercontent.com/NeoRazorX/modelo_347/master/facturascripts.ini'
 update_url = 'https://github.com/NeoRazorX/modelo_347/archive/master.zip'
+require = 'facturacion_base'
